@@ -1,7 +1,8 @@
 == Edge
 
 * minor enhancements
-  * Updated Readme/TDOD
+  * Updated Readme/TODO
+  * Some crufty output is now suppressed/removed
 
 == 0.1.5 2008-11-25
 
